# Scientific-Modelling-Computer-lab

./: README.md  tudmodlab_project.md  tudmodlab_project_embed.md
midterm/: analysis.ipynb  coverlettermid.docx
midterm/presentation/: Bendeguz_Borkovits_t7ur9p_midpres.tex
midterm/report/: Bendeguz_Borkovits_t7ur9p_midrep.tex  references.bib
midterm/sim/: action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  run.cc  run.hh  sim.cc
postmidterm1/: CMakeLists.txt  bendeguz_borkovits_t7ur9p_pres3.tex  bendeguz_borkovits_t7ur9p_rep3.tex  project_nebula.cc  references.bib
postmidterm2/: bendeguz_borkovits_t7ur9p_pres4.tex  bendeguz_borkovits_t7ur9p_rep4.tex  neutron.ipynb  references.bib
postmidterm2/data/: qbbc_100neut_100mev.csv  qgspberthp_100neut_100mev.csv  qgspbichp_100neut_100mev.csv  qgspinclxxhp_100neut_100mev.csv  qgspinclxxx_100neut_100mev.csv
postmidterm2/nebula/: project-run.sh  project_nebula.cc  run2.mac  vis.mac
the_end/: bendeguz_borkovits_t7ur9p_coverletter_final.docx  bendeguz_borkovits_t7ur9p_final_pres.tex  bendeguz_borkovits_t7ur9p_final_rep.tex  proton.ipynb  references.bib
the_end/data/: protonos_1.csv  protonos_2.csv  protonos_3.csv  protonos_4.csv  protonos_5.csv
the_end/nebula/: project-install.sh  (+1 more)
week1/: borkovits_bendeguz_t7ur9p_pres1.tex  borkovits_bendeguz_t7ur9p_rep1.tex
week2/: bendeguz_borkovits_t7ur9p_pres2.tex  bendeguz_borkovits_t7ur9p_rep2.tex
week2/sim/: CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  generator.cc  generator.hh  physics.cc  physics.hh  sim.cc
(+17 files in other folders)
